--- a/frontend/src/app/features/cart/cart-page/cart-page.component.html
+++ b/frontend/src/app/features/cart/cart-page/cart-page.component.html
@@ -68,6 +68,6 @@
 
     <div class="text-center mt-5"*ngIf="!isLoading && cartItems.length === 0">
         <div class="card-title">You Cart is empty</div>
-        <button class="btn secondary-btn mt-2 rounded-0" [routerLink]="'/'"> Shop Now!</button>
+        <button class="btn secondary-btn mt-2 rounded-0" [routerLink]="'/products'"> Shop Now!</button>
     </div>
 </div>
