--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -134,6 +134,37 @@ a{
     background: var(--body-color) !important;
 }
 
+/*  BANNER CARD */
+.banner-card{
+    position: relative !important;
+    overflow: hidden !important;
+    max-height: 760px;
+}
+
+.card-bg-img{
+    object-fit: cover;
+    z-index: -10;
+    height: 100%;
+    width: 100%;
+}
+.banner-card-body{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.banner-card:hover .banner-card-body {
+    opacity: 1;
+}
+
 /* dropdown */
 
 
@@ -186,7 +217,7 @@ a{
 }
 
 .product-img{
-    height: 400px;
+    height: 450px;
 }
 
 .status-circle{
@@ -234,3 +265,9 @@ a{
     to { transform: rotate(360deg); 
     }
   }
+
+@media (min-width: 1400px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        max-width: 1500px;
+    }
+}
