--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="main-content">
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
-    <footer class="bg-white text-center py-3 position-fixed w-100 bottom-0 border-top">
-        copyright 2025 &copy <span class="primary-text fw-semibold">{{ title }}</span>.
-    </footer>
 </div>
+<footer class="bg-white text-center py-3 w-100 position-fixed bottom-0  border-top">
+    copyright 2025 &copy <span class="primary-text fw-semibold">{{ title }}</span>.
+</footer>
