Cart functionality & profile bug fixes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,6 @@
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
 </div>
-<footer class="bg-white text-center py-3 w-100 position-fixed bottom-0  border-top">
+<!-- <footer class="bg-white text-center py-3 w-100 position-fixed bottom-0  border-top">
     copyright 2025 &copy <span class="primary-text fw-semibold">{{ title }}</span>.
-</footer>
+</footer> -->
