--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -243,6 +243,12 @@ a{
     }
 }
 
+@media(max-width: 450px){
+    .product-img{
+        height: 100%;
+    }
+}
+
 /* LOADER */
 
 #global-loader {
