--- a/frontend/src/app/features/products/product-list/product-list.component.html
+++ b/frontend/src/app/features/products/product-list/product-list.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-5">
-  <div class="row g-5">
+<div class="container">
+  <div class="row g-5 p-0 m-0">
     <div class="col-xl-4" *ngFor="let product of products">
         <div class="card" >
             <a [routerLink]="['/product-details', product._id]">
