--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="mb-3">
         <ngb-carousel [showNavigationArrows]="false">
             <ng-template ngbSlide>
-                <div class="bg-black mxh-500">
+                <div class="bg-black bg-gradient mxh-500">
                     <div class="container">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-xl-6">
@@ -18,7 +18,7 @@
                 </div>
             </ng-template>
             <ng-template ngbSlide>
-                <div class="bg-black mxh-500">
+                <div class="bg-black bg-gradient mxh-500">
                     <div class="container">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-xl-6">
@@ -34,7 +34,7 @@
                 </div>      
             </ng-template>
             <ng-template ngbSlide>
-                <div class="bg-black mxh-500">
+                <div class="bg-black bg-gradient mxh-500">
                     <div class="container">
                         <div class="row align-items-center justify-content-center">
                             <div class="col-xl-6">
@@ -118,6 +118,32 @@
                 <button [routerLink]="'/products'" class="btn btn-outline-light btn-lg rounded-0 px-5">VISIT STORE <i class="fa fa-arrow-right"></i></button>
             </div>
             <img class="img-fluid rounded-2 card-bg-img" style="margin-bottom: 200px;" src="https://i.pinimg.com/originals/c7/12/9a/c7129a48ebd427235b8dd895e18c358b.gif" alt="Puma">
+        </div>
+    </div>
+
+    <div class="bg-black bg-gradient">
+        <div class="container">
+            <div class="row align-items-center justify-content-evenly">
+                <div class="col-xl-5 text-light">
+                    <h4>Subscribe to our Newsletter!</h4>
+                    <div class="btn-group w-100 rounded-pill">
+                        <input
+                          #emailInput
+                          type="email"
+                          class="form-control rounded-0 rounded-end rounded-pill ps-5"
+                          placeholder="Subscribe to our newsletter..."
+                          required
+                        />
+                        <button
+                          class="btn primary-btn rounded-start rounded-pill pe-4"
+                          (click)="onSubscribe(emailInput.value)"
+                        >
+                          Submit
+                        </button>
+                      </div>
+                </div>
+                <img src="assets/newsletter.png" width="300px" alt="newsletter" style="width: 300px;">
+            </div>
         </div>
     </div>
 </div>
