--- a/frontend/src/app/features/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/dashboard/dashboard.component.html
@@ -112,18 +112,18 @@
     </div>
 
     <div class="container my-4">
-        <div class="card banner-card border-0 position-relative overflow-hidden" style="max-height: 600px;">
+        <div class="card banner-card border-0 position-relative overflow-hidden show-card" >
             <div class="banner-card-body position-absolute d-flex align-items-center">
-                <h1 class="fw-bold text-center">CHECK OUT OUR <span class="primary-text fw-bold">LATEST PRODUCTS  </span></h1>
+                <h1 class="text-center">CHECK OUT OUR <span class="secondary-text fw-bold">LATEST PRODUCTS  </span></h1>
                 <button [routerLink]="'/products'" class="btn btn-outline-light btn-lg rounded-0 px-5">VISIT STORE <i class="fa fa-arrow-right"></i></button>
             </div>
-            <img class="img-fluid rounded-2 card-bg-img" style="margin-bottom: 200px;" src="https://i.pinimg.com/originals/c7/12/9a/c7129a48ebd427235b8dd895e18c358b.gif" alt="Puma">
+            <img class="img-fluid rounded-2 card-bg-img" src="https://i.pinimg.com/originals/c7/12/9a/c7129a48ebd427235b8dd895e18c358b.gif" alt="Puma">
         </div>
     </div>
 
-    <div class="bg-black bg-gradient">
+    <div class="bg-black bg-gradient mt-5">
         <div class="container">
-            <div class="row align-items-center justify-content-evenly">
+            <div class="row align-items-center g-4 justify-content-evenly">
                 <div class="col-xl-5 text-light">
                     <h4>Subscribe to our Newsletter!</h4>
                     <div class="btn-group w-100 rounded-pill">
