--- a/frontend/src/app/features/order/place-order/place-order.component.html
+++ b/frontend/src/app/features/order/place-order/place-order.component.html
@@ -33,7 +33,7 @@
             </label>
             <app-addnew-address></app-addnew-address>
             <div class="d-flex justify-content-end">
-              <button class="btn btn-primary" (click)="currentStep = 2">Next</button>
+              <button class="btn btn-primary mt-3" (click)="currentStep = 2">Next</button>
             </div>
           </div>
         </div>
@@ -56,9 +56,11 @@
                 <div class="col-xl-12"  *ngFor="let item of cartItems">
                   <div class="card mb-3">
                     <div class="card-body">
-                        <div class="d-flex align-items-start justify-content-start">
-                            <img src="{{ item.productId.image }}" class="rounded-2 me-3" width="200px" height="200px">
-                            <div>
+                        <div class="row g-3 align-items-start justify-content-start">
+                            <div class="col-lg-3">
+                              <img src="{{ item.productId.image }}" class="rounded-2 me-3" width="200px" height="200px">
+                            </div>
+                            <div class="col-lg-9">
                                 <h3>{{ item.productId.name }}</h3>
                                 <p class="mb-1">{{ item.productId.description }}</p>
                                 <p class="fw-semibold">{{ item.productId.brand }}</p>
