--- a/frontend/src/app/features/products/product-list/product-list.component.html
+++ b/frontend/src/app/features/products/product-list/product-list.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-  <div class="row g-5 p-0 m-0">
-    <div class="col-xl-4" *ngFor="let product of products">
+  <div class="row g-4 p-0 m-0">
+    <div class="col-xl-4 col-lg-6 col-md-6 col-12" *ngFor="let product of products">
         <div class="card" >
             <a [routerLink]="['/product-details', product._id]">
-                <img class="card-img-top product-img border" src="{{ product.image }}" alt="Product Image">
+                <img class="card-img-top card-product-img border" src="{{ product.image }}" alt="Product Image">
             </a>
             <div class="card-body">
                 <div class="badge bg-success text-white float-end text-end"  *ngIf="product.rating > 0">
