--- a/frontend/src/app/features/products/product-details/product-details.component.html
+++ b/frontend/src/app/features/products/product-details/product-details.component.html
@@ -18,19 +18,25 @@
             <span class="fw-semibold {{ product.countInStock ? 'text-secondary' : 'text-danger' }}">
                 Stock : {{ product.countInStock ? product.countInStock : 'Currently Unavailable' }}
             </span>
+            
             <div class="mt-3" *ngIf="product?.sizes?.length">
-                <div class="fw-semibold mb-2">Select Size:</div>
-                <div class="d-flex flex-wrap gap-2">
-                  <a
-                    class="border p-2 rounded text-center text-decoration-none text-dark px-3"
-                    *ngFor="let size of product.sizes"
-                    [ngClass]="{'secondary-bg text-white': selectedSize === size}"
-                    (click)="selectedSize = size"
-                  >
-                    {{ size }}
+              <div class="fw-semibold mb-2">Select Size:</div>
+              <div class="d-flex flex-wrap gap-2">
+                <a
+                  *ngFor="let size of product.sizes"
+                  class="border p-2 rounded text-center text-decoration-none text-dark px-3"
+                  [ngClass]="{
+                    'secondary-bg text-white': selectedSize === size.size,
+                    'bg-light': selectedSize !== size.size,
+                    'disabled': size.stock <= 0
+                  }"
+                  [attr.disabled]="size.stock <= 0 ? true : null"
+                  (click)="size.stock > 0 && (selectedSize = size.size)"
+                >
+                  {{ size.size }}
                 </a>
-                </div>
               </div>
+            </div>
               
             <br>
             <div class="text-nowrap">
